--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "number-tolocalestring-polyfill",
   "version": "1.0.0",
   "description": "Polyfill Number.prototype.toLocaleString() with globalize. ",
-  "main": "index.js",
+  "main": "lib/index.js",
   "dependencies": {
     "cldr-data": "^30.0.1",
     "globalize": "^1.1.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
+    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-preset-airbnb": "^1.1.1",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
@@ -20,6 +25,9 @@
     "globalize": "^1.1.1"
   },
   "scripts": {
+    "build": "rm -rf lib && babel -d lib src",
+    "build:watch": "npm run build -- --watch",
+    "prepublish": "npm run build",
     "test": "jest"
   },
   "repository": {
