--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "number-tolocalestring-polyfill",
-  "version": "1.0.0",
-  "description": "Polyfill Number.prototype.toLocaleString() with globalize. ",
+  "version": "1.0.1",
+  "description": "Polyfill Number.prototype.toLocaleString() with globalize",
   "main": "lib/index.js",
   "dependencies": {
     "cldr-data": "^30.0.1",
@@ -13,6 +13,8 @@
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-airbnb": "^1.1.1",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
@@ -20,13 +22,8 @@
     "eslint-plugin-react": "^6.5.0",
     "jest": "^16.0.2"
   },
-  "peerDependencies": {
-    "cldr-data": "^30.0.1",
-    "globalize": "^1.1.1"
-  },
   "scripts": {
-    "build": "rm -rf lib && babel -d lib src",
-    "build:watch": "npm run build -- --watch",
+    "build": "rm -rf lib && mkdir lib && browserify ./src/index.js -o ./lib/index.js -t [ babelify ]",
     "prepublish": "npm run build",
     "test": "jest"
   },
