--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
-  presets: ["airbnb"],
-  plugins: ["transform-object-rest-spread"]
+  "presets": ["@babel/env"],
+  "plugins": [
+    "dynamic-import-node",
+    "@babel/plugin-proposal-export-default-from"
+  ]
 }
