--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 {
-    "extends": "airbnb"
+  "root": true,
+  "parserOptions": {
+    "parser": "babel-eslint",
+    "sourceType": "module"
+  },
+  "extends": "@nuxtjs",
+  "rules": {
+    "no-extend-native": ["off"]
+  }
 }
