feat: use bili for building
chore: update readme

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
   "presets": ["@babel/env"],
   "plugins": [
-    "dynamic-import-node",
-    "@babel/plugin-proposal-export-default-from"
+    "dynamic-import-node"
   ]
 }
